test/spec_vectors/unreached-invalid/fail/module_1.wat
(module (func $global-index (unreachable) (drop (global.get 0))))